--- a/src/app/posts/18.md
+++ b/src/app/posts/18.md
@@ -635,11 +635,11 @@ Correspondente da British Academy.*
 [^17]: A. Supiot, "The tasks ahead of the ILO at its centenary",
     International Labour Review, vol. 159 (2020), nº 1.
 
-[^18]: Cf. A. Supiot, «Globalisation or 'Mondialisation'? Taking [Social
+[^18]: Cf. A. Supiot, «Globalisation or 'Mondialisation'? Taking Social
     Models Seriously» in Brian Langille and Anne Trebilcock \[eds.\]
     *Social Justice and the World of Work: Possible Global Futures --
     Essays in honour of Francis Maupain*, Oxford, Hart, 2023, pp.
-    13-22.]{.underline}
+    13-22.
 
 [^19]: Claude Lévi-Srauss, *Race et histoire* \[1952\], Paris, Gonthier,
     p. 85.
