--- a/src/app/posts/212.md
+++ b/src/app/posts/212.md
@@ -177,6 +177,6 @@ direitos dos jovens, trabalhadores e reformados.
 
 [^1]: *Este artigo foi traduzido da versão inglesa por Maria da Paz
     Campos Lima, com a permissão do autor. A versão inglesa, mais
-    sucinta, foi publicada no jornal americano Labor Notes "**[[Millions
+    sucinta, foi publicada no jornal americano Labor Notes "**[Millions
     of Italians Join General Strike for
-    Gaza]{.underline}](https://labornotes.org/2025/10/millions-italians-join-general-strike-gaza)".***
+    Gaza](https://labornotes.org/2025/10/millions-italians-join-general-strike-gaza)".***
