--- a/src/app/posts/217.md
+++ b/src/app/posts/217.md
@@ -42,10 +42,10 @@ Nas medidas propostas encontra-se: i) a introdução do limite semanal de
 35 horas no setor privado; ii) a limitação e a regulação do regime do
 trabalho por turnos e da laboração contínua; iii) o aumento dos dias
 férias ou a iv) implementação, de forma generalizada, da semana de 4
-dias. Contudo, as iniciativas legislativas sobre as [[35
-horas]{.underline}](https://www.parlamento.pt/ActividadeParlamentar/Paginas/DetalheIniciativa.aspx?BID=43949)
+dias. Contudo, as iniciativas legislativas sobre as [35
+horas](https://www.parlamento.pt/ActividadeParlamentar/Paginas/DetalheIniciativa.aspx?BID=43949)
 no setor privado ou a regulação do regime de
-[[turnos]{.underline}](https://www.parlamento.pt/ActividadeParlamentar/Paginas/DetalheIniciativa.aspx?BID=44081),
+[turnos](https://www.parlamento.pt/ActividadeParlamentar/Paginas/DetalheIniciativa.aspx?BID=44081),
 mesmo em contextos em que a correlação de forças no Parlamento
 permitiria avanços de relevo nesta matéria, têm sido chumbadas.
 
@@ -77,8 +77,8 @@ em que não se dorme[^4], é marcado pelos impactos de um sistema
 económico em que as regras são ditadas pelo mercado e pelo consumo
 desenfreado.
 
-A [[Iniciativa Legislativa
-Cidadã]{.underline}](https://participacao.parlamento.pt/initiatives/3185)
+A [Iniciativa Legislativa
+Cidadã](https://participacao.parlamento.pt/initiatives/3185)
 (ILC) "Pelo Encerramento do Comércio aos Domingos e Feriados e Pela
 Redução do Período de Funcionamento até as 22h" , lançada em
 2023 e que chegou às 20 000 assinaturas, pelo que foi discutida e votada
@@ -100,8 +100,8 @@ alteração, na prática, fez com que quer os Centros Comerciais, quer as
 grandes superfícies estejam abertos todos os dias da semana, todos os
 dias do ano, das 06h00 às 24h00.
 
-Os [[partidos à direita e ao
-centro,]{.underline}](https://www.publico.pt/2024/08/10/politica/noticia/lojas-fechadas-domingos-feriados-nao-devera-2100375)
+Os [partidos à direita e ao
+centro,](https://www.publico.pt/2024/08/10/politica/noticia/lojas-fechadas-domingos-feriados-nao-devera-2100375)
 bem como a Associação Patronal, a APED -- Associação Portuguesa de
 Empresas de Distribuição, posicionaram-se contra a alteração proposta
 pelo CESP.
@@ -110,11 +110,11 @@ Contudo, houve sinais de sentido contrário, quer do lado patronal, quer
 de representantes da Igreja Católica.
 
 No setor do retalho, o líder do grupo Mosqueteiros, que detém as marcas
-Intermarché, Bricomarché e Roady, afirmou, em [[agosto de
-2024]{.underline}](https://jornaleconomico.sapo.pt/noticias/somos-a-favor-de-fechar-aos-domingos-diz-lider-portugues-do-grupo-os-mosqueteiros/),
+Intermarché, Bricomarché e Roady, afirmou, em [agosto de
+2024](https://jornaleconomico.sapo.pt/noticias/somos-a-favor-de-fechar-aos-domingos-diz-lider-portugues-do-grupo-os-mosqueteiros/),
 ser a favor do encerramento ao domingo. Também a AMRR - Associação de
 Marcas de Retalho e Restauração, em setembro desse ano, tornou
-[[pública]{.underline}](https://expresso.pt/exclusivos/2024-09-12-centros-comerciais-podem-fechar-as-22h--e-o-que-os-lojistas-querem-mostra-inquerito-de-associacao-do-sector-fa63bd43)
+[pública](https://expresso.pt/exclusivos/2024-09-12-centros-comerciais-podem-fechar-as-22h--e-o-que-os-lojistas-querem-mostra-inquerito-de-associacao-do-sector-fa63bd43)
 a vontade dos lojistas alterarem horários e fecharem mais cedo, em
 especial aos fins de semana e feriados após a realização de um inquérito
 aos seus associados.
@@ -135,8 +135,8 @@ credos religiosos, apreciadas casuisticamente de acordo com critérios de
 proporcionalidade que salvaguardem o núcleo essencial do direito e
 liberdade de culto[^5].
 
-O bispo do Porto, [[em
-2019]{.underline}](https://www.jornaldenegocios.pt/empresas/comercio/detalhe/centros-comerciais-em-total-desacordo-com-o-bispo-do-porto-sobre-aberturas-ao-domingo),
+O bispo do Porto, [em
+2019](https://www.jornaldenegocios.pt/empresas/comercio/detalhe/centros-comerciais-em-total-desacordo-com-o-bispo-do-porto-sobre-aberturas-ao-domingo),
 afirmou que os países ricos não laboram ao Domingo e designou a
 laboração contínua de "novo esclavagismo" criticando o recurso
 injustificado aos turnos. Afirmações em linha com as bases da doutrina
@@ -152,7 +152,7 @@ sobretudo quando não existe nenhuma razão imperiosa para que não o
 possam fazer.
 
 Contudo, o Parlamento voltou a
-[[chumbar]{.underline}](https://sicnoticias.pt/pais/2025-06-26-parlamento-rejeita-encerramento-de-grandes-superficies-aos-domingos-e-feriados-e3dbda55)
+[chumbar](https://sicnoticias.pt/pais/2025-06-26-parlamento-rejeita-encerramento-de-grandes-superficies-aos-domingos-e-feriados-e3dbda55)
 o projeto de encerramento do comércio ao domingo, contrariando o que 
 acontece em outras capitais europeias. O domingo é, em regra, um dia de
 descanso obrigatório, com exceção de atividades e setores que não podem
