--- a/src/app/posts/7.md
+++ b/src/app/posts/7.md
@@ -486,13 +486,13 @@ os fixar no SNS.
 [^4]: De acordo com a OCDE, Portugal e a Grécia figuram no grupo de
     países com salários mais baixos, quer dos médicos especialistas,
     quer dos médicos generalistas.
-    [[https://www.euronews.com/next/2023/08/11/doctors-salaries-which-countries-pay-the-most-and-least-in-europe]{.underline}](https://www.euronews.com/next/2023/08/11/doctors-salaries-which-countries-pay-the-most-and-least-in-europe);
+    [https://www.euronews.com/next/2023/08/11/doctors-salaries-which-countries-pay-the-most-and-least-in-europe](https://www.euronews.com/next/2023/08/11/doctors-salaries-which-countries-pay-the-most-and-least-in-europe);
     e
-    [[https://www.oecd.org/en/publications/health-at-a-glance-europe-2022_507433b0-en.html]{.underline}](https://www.oecd.org/en/publications/health-at-a-glance-europe-2022_507433b0-en.html)
+    [https://www.oecd.org/en/publications/health-at-a-glance-europe-2022_507433b0-en.html](https://www.oecd.org/en/publications/health-at-a-glance-europe-2022_507433b0-en.html)
 
-[^5]: [[Acordo Plurianual de Valorização dos Trabalhadores da
+[^5]: [Acordo Plurianual de Valorização dos Trabalhadores da
     Administração
-    Pública]{.underline}](https://www.portugal.gov.pt/download-ficheiros/ficheiro.aspx?v=%3d%3dBQAAAB%2bLCAAAAAAABAAzNDaytAAAvjWUuQUAAAA%3d)
+    Pública](https://www.portugal.gov.pt/download-ficheiros/ficheiro.aspx?v=%3d%3dBQAAAB%2bLCAAAAAAABAAzNDaytAAAvjWUuQUAAAA%3d)
     de 24 de Outubro de 2022. Esta medida promoveu subidas salariais
     nominais, no início do ano de 2023, de 52,11 euros, para vencimentos
     brutos até 2612,03 euros, e de 2 %, para valores superiores. Em
@@ -501,9 +501,9 @@ os fixar no SNS.
     26-B/2023). A Frente Comum caracterizou a medida como um "acordo de
     empobrecimento".
 
-[^6]: [[Acordo Plurianual de Valorização dos Trabalhadores da
+[^6]: [Acordo Plurianual de Valorização dos Trabalhadores da
     Administração
-    Pública]{.underline}](https://www.portugal.gov.pt/download-ficheiros/ficheiro.aspx?v=%3d%3dBQAAAB%2bLCAAAAAAABAAzNDaytAAAvjWUuQUAAAA%3d)
+    Pública](https://www.portugal.gov.pt/download-ficheiros/ficheiro.aspx?v=%3d%3dBQAAAB%2bLCAAAAAAABAAzNDaytAAAvjWUuQUAAAA%3d)
     de 24 de Outubro de 2022. Esta medida promoveu subidas salariais
     nominais no início do ano de 2023 de 52,11 euros, para vencimentos
     brutos até 2612,03 euros, e de 2 %, para valores superiores. Em
@@ -533,7 +533,7 @@ os fixar no SNS.
     entre 2011 e 2024, o poder de compra de toda a Administração Pública
     diminuiu em -10,6%, enquanto o dos médicos, no mesmo período,
     reduziu-se em -18,5%.
-    [[https://www.eugeniorosa.com/Articles/Download/496?handler=Signup]{.underline}](https://www.eugeniorosa.com/Articles/Download/496?handler=Signup)
+    [https://www.eugeniorosa.com/Articles/Download/496?handler=Signup](https://www.eugeniorosa.com/Articles/Download/496?handler=Signup)
 
 [^9]: Decreto-Lei n.º 103/2023 de 7 de novembro.
 
