--- a/src/app/posts/206.md
+++ b/src/app/posts/206.md
@@ -92,7 +92,7 @@ para estes Seres Humanos explorados
 A Uberização é um sistema montado para moer gente e obter o máximo de
 lucro\... sem regras, e pelo lucro em cima dos trabalhadores, vale tudo!
 
-[A Asitrap - Associação dos Imigrantes e Trabalhadores por Aplicação,
+A Asitrap - Associação dos Imigrantes e Trabalhadores por Aplicação,
 foi fundada formalmente em fevereiro 2025 para ser o rosto da luta
 destes trabalhadores. Veio na sequência do grupo Estafetas em
 Luta, que nasceu em 2019 reunindo 48 estafetas da região norte, que
