--- a/src/app/posts/209.md
+++ b/src/app/posts/209.md
@@ -8,7 +8,7 @@ section: 'Contra-reforma laboral'
 
 ![Créditos: Ana Durães](/images/209.jpg)
 
-**Aprende a nadar, companheiro, que a maré se vai levantar...»*[^1]
+*Aprende a nadar, companheiro, que a maré se vai levantar...»*[^1]
 
 Em 24 de Julho de 2025, em pleno período de férias para uma grande parte
 da população, o governo da AD (PSD/CDS) apresentou na concertação social
