--- a/src/app/posts/210.md
+++ b/src/app/posts/210.md
@@ -15,7 +15,7 @@ inequívoco. A própria Ministra do Trabalho, Rosário Palma Ramalho,
 afirmou, entretanto, numa entrevista televisiva, que o anteprojeto --
 naturalmente, desprovido de ideologia -- não pretendia beneficiar as
 empresas (leia-se: os patrões), mas que, justamente, a "lei em vigor é
-que tem algum desequilíbrio em favor dos trabalhadores"! [^1]
+que tem algum desequilíbrio em favor dos trabalhadores"! 
 
 Vai daí, toca a reequilibrar! Sendo impossível analisar aqui todas as
 alterações constantes do anteprojeto em matéria de contrato de trabalho,
