--- a/src/app/posts/202.md
+++ b/src/app/posts/202.md
@@ -1,6 +1,6 @@
 ---
-title: 'Contradições à portuguesa? Entre envelhecimento, escassez de trabalhadores e constrangimentos à entrada e permanência de mão-de-obra estrangeira'
-subtitle: ''
+title: 'Contradições à portuguesa?'
+subtitle: 'Entre envelhecimento, escassez de trabalhadores e constrangimentos à entrada e permanência de mão-de-obra estrangeira'
 date: '2026-01-21'
 author: "Catarina Reis de Oliveira"
 section: 'Trabalho e Imigração'
