--- a/src/app/posts/215.md
+++ b/src/app/posts/215.md
@@ -1,6 +1,6 @@
 ---
-title: 'Uma luta exemplar de trabalhadores em outsourcing: o caso dos bares da Comboios de Portugal'
-subtitle: ''
+title: 'Uma luta exemplar de trabalhadores em outsourcing'
+subtitle: 'o caso dos bares da Comboios de Portugal'
 date: '2026-01-25'
 author: "Daniel Borges"
 section: ''
