--- a/src/app/posts/210.md
+++ b/src/app/posts/210.md
@@ -26,7 +26,7 @@ banco de horas. Muito mais haveria para dizer, mas vamos sobrevoar as
 alterações propostas, quanto a estes pontos, nesta tão *reequilibradora*
 contra-reforma laboral.
 
-1.  **Contratação a prazo e renúncia aos créditos laborais**
+**Contratação a prazo e renúncia aos créditos laborais**
 
 A Constituição consagra, no seu art.º 53.º, a garantia da segurança no
 emprego, com a correlativa proibição dos despedimentos sem justa causa.
@@ -136,7 +136,7 @@ que, pela vez primeira entre nós, permite a renúncia a tudo e a todo o
 tempo, coonestando a abdicação do trabalhador perante o empregador,
 através de uma simples assinatura reconhecida notarialmente.
 
-1.  **Despedimento ilícito e (não) reintegração.**
+**Despedimento ilícito e (não) reintegração.**
 
 Em matéria de despedimento, o princípio geral consagrado no atual Código
 do Trabalho continua a ser aquele que foi acolhido no nosso país após a
@@ -242,7 +242,7 @@ traduz uma opção ideológica de quem governa, legítima em si mesma, mas
 incompatível com a pauta de valores consagrada na nossa Constituição. E,
 por isso, juridicamente inadmissível.
 
-1.  **O impúdico retorno do *despedir-para-terceirizar***
+**O impúdico retorno do *despedir-para-terceirizar***
 
 Uma das normas mais polémicas da "Agenda do Trabalho Digno" consistiu no
 novo art.º 338.º-A do Código, que proíbe ao empregador a aquisição de
@@ -329,8 +329,7 @@ lucro dos seus titulares, bastará para legitimar o despedimento. Coisa,
 a meu ver, inadmissível e contrária ao quadro de valores acolhido pela
 CRP.
 
-1.  **O procedimento disciplinar e o discreto regresso da instrução
-    facultativa**
+**O procedimento disciplinar e o discreto regresso da instrução facultativa**
 
 Quanto o trabalhador é acusado de ter cometido alguma infração
 disciplinar, recebendo a nota de culpa com a descrição circunstanciada
@@ -385,7 +384,7 @@ duvidoso que esteja conforme com as exigências constitucionais nesta
 matéria, que garantem, repete-se, não só o direito de audiência, mas
 também o direito de defesa do arguido.
 
-1.  **O banco de horas individual**
+**O banco de horas individual**
 
 O banco de horas consiste num mecanismo flexibilizador da organização do
 tempo de trabalho, que confere ao empregador o poder de alargar o
