--- a/src/app/posts/211.md
+++ b/src/app/posts/211.md
@@ -89,7 +89,7 @@ esquecido que a força de um direito não depende apenas do seu
 acolhimento pelo sistema jurídico, mas também da fonte que o acolhe. É
 esta que lhe determina o valor e a respetiva força jurídica.
 
-1.  **Alguns dados a considerar**
+ **Alguns dados a considerar**
 
 A liberdade sindical, a contratação coletiva e a greve passaram a fazer
 parte do sistema jurídico português a seguir à revolução democrática de
@@ -143,7 +143,7 @@ constitucional. Vale por dizer, que qualquer projeto de reforma da lei
 laboral deve ter em mente o desenvolvimento e aprofundamento do programa
 da constituição para o trabalho.
 
-2.  **O direito de contratação na Constituição da República Portuguesa**
+**O direito de contratação na Constituição da República Portuguesa**
 
 O direito de contratação coletiva tem assento no art.º 56º n.º 3 e n.º 4
 da CRP. Resultam desta norma vários corolários. Desde logo, estamos
@@ -218,7 +218,7 @@ democrática de 1974. Constituíram e constituem instrumentos de
 excelência para a densificação de uma verdadeira democracia económica e
 social (art.º 2º da CRP).
 
-1.  **O Código de Trabalho de 2003**
+**O Código de Trabalho de 2003**
 
 O legislador de 2003 aboliu os princípios do tratamento mais favorável e
 da continuidade da convenção coletiva. Entrou em rutura com o passado. O
@@ -265,11 +265,11 @@ argumentação nada clara, ou melhor, baseada em raciocínios que apontam
 para conclusões divergentes, o Tribunal Constitucional concluiu pelo não
 acolhimento na CRP do princípio do tratamento mais favorável.
 
-1.  **O Anteprojeto XXI ora em discussão**
+**O Anteprojeto XXI ora em discussão**
 
 O Código do Trabalho de 2003 tem sido alterado com alguma frequência. O
 princípio do tratamento mais favorável foi parcialmente recuperado em
-2009. O art.º 3º, n.º 3, do CT, passou a consagrar um conjunto
+1.    O art.º 3º, n.º 3, do CT, passou a consagrar um conjunto
 importante de matérias onde vigora o princípio. Todavia, esta
 consagração surge como um desvio do n.º 1 do art.º 3º, o qual, como
 regime regra, continua a consagrar a recusa do princípio.
@@ -319,7 +319,7 @@ arbitragem possa ser um meio de evitar a caducidade da convenção, abrir
 a porta à redução das condições de trabalho através da modificação da
 convenção coletiva.
 
-1.  **Relação entre a lei e a convenção coletiva**
+**Relação entre a lei e a convenção coletiva**
 
 A importância presente e futura do teletrabalho "entra pelos olhos
 dentro". É urgente atentar na melhor forma de regular esta nova
@@ -366,7 +366,7 @@ o que se propõe é a faculdade de baixar o custo do trabalho suplementar.
 E assim se dá mais uma ferroada à limitação da indisponibilidade do
 trabalhador.
 
-**4.2 A extensão unilateral da convenção na empresa**
+**A extensão unilateral da convenção na empresa**
 
 O legislador de 2009, num assomo de criatividade, construiu um regime em
 que o trabalhador não sindicalizado pode aderir a uma convenção coletiva
@@ -410,7 +410,7 @@ coletivas. É o que demanda a coerência do sistema jurídico-laboral.
 Por tudo isto, parece-nos que a implantação desta alteração legislativa
 atentará contra a CRP.
 
-**4.3. Maior facilidade da denúncia da convenção coletiva**
+**Maior facilidade da denúncia da convenção coletiva**
 
 Para compreender esta alteração legislativa, convém ter em vista algumas
 ideias básicas. Desde logo, ter presente que a convenção coletiva não é
@@ -515,7 +515,7 @@ fundamentação, o Anteprojeto decreta o afastamento da arbitragem para
 apreciação da fundamentação da denúncia. Propõe, já se vê, a eliminação
 do art.º 500º A do CT.
 
-**4.4. Exclusão da arbitragem como meio para evitar a caducidade**
+**Exclusão da arbitragem como meio para evitar a caducidade**
 
 A arbitragem é um mecanismo em que um terceiro imparcial -- um árbitro
 -- emite uma decisão para resolver uma controvérsia ou conflito, a qual
@@ -626,8 +626,7 @@ sobrevigência, bem como, consequentemente, as situações
 descritas que justificavam o recurso à arbitragem necessária, hoje
 previstas no art.º 510º, n.º 2, do CT.
 
-**4.5. A modificação da convenção coletiva para redução das condições de
-trabalho**
+**A modificação da convenção coletiva para redução das condições de trabalho**
 
 Numa ladainha com longos anos, invocam alguns que as convenções
 coletivas contribuem para dificultar o crescimento e a competitividade
@@ -703,7 +702,7 @@ Esta solução correrá o risco de degradar a imagem da arbitragem nas
 relações laborais. O colégio arbitral vai fazer o papel de "mau da
 fita". É pena.
 
-**4.6. A reforma laboral a fazer**
+**A reforma laboral a fazer**
 
 Decorre do exposto uma atitude crítica em relação às propostas do
 Anteprojeto XXI sobre a contratação coletiva. Não vislumbramos nenhum
