--- a/src/app/posts/214.md
+++ b/src/app/posts/214.md
@@ -21,14 +21,14 @@ CRP), que, na linha de instrumentos normativos supranacionais (v.g. a
 Convenção nº 158 da OIT), assume um pendor acentuadamente restritivo das
 decisões empresariais de despedimento.
 
-É certo que, citando [Alain Supiot, "]{.smallcaps}num sistema jurídico
+É certo que, citando Alain Supiot, "num sistema jurídico
 que reconhece a liberdade de empresa, a segurança do emprego não pode
 ser senão relativa"[^1]. Ainda assim, o valor da estabilidade no emprego
 constitui uma peça essencial da nossa ordem jurídico-laboral, um pilar
 estruturante da mesma, tal como resulta do disposto no art. 53º da CRP.
 Não é, decerto, um valor absoluto, mas também não é, de modo algum, um
-valor obsoleto, como bem assinala [João Leal
-Amado]{.smallcaps}[^2][.]{.smallcaps}
+valor obsoleto, como bem assinala João Leal
+Amado[^2]
 
 Ora, com o objetivo de lograr uma melhor compatibilização com o regime
 constitucional de proteção dos trabalhadores contra decisões
