--- a/src/app/posts/217.md
+++ b/src/app/posts/217.md
@@ -180,7 +180,7 @@ dignificação do trabalho passa por aí. O tempo para viver[^6] não
 espera.
 
 [^1]: Para mais desenvolvimentos sobre a evolução da regulação do tempo
-    de trabalho em Portugal, ler [Luís Silva]{.smallcaps} et. al , *O
+    de trabalho em Portugal, ler Luís Silva et. al , *O
     tempo de trabalho -- 1919-2019. Um centenário incómodo: ainda as 8
     horas? Debates sobre o tempo de trabalho hoje*, Edições Eletrónicas
     CEAUP, 2021.
@@ -190,16 +190,16 @@ espera.
     ou, sobre o mesmo tema e de 03/09/2024, Proc. 2133/21.0T8VCT.G1.S1
     (José Luís Sapateiro)
 
-[^3]: [Joana Nunes Vicente]{.smallcaps}, "*Trabalho por turnos, horário
+[^3]: Joana Nunes Vicente, "*Trabalho por turnos, horário
     flexível e direitos fundamentais -- breves notas a respeito de uma
     nova controvérsia jurisprudencial"*, *Revista Questões Laborais
     n.º62*, Coimbra, 2023, pp. 6 e ss.
 
-[^4]: [Jonathan Crar]{.smallcaps}y, *24/7 - O Capitalismo Tardio e os
+[^4]: Jonathan Crary, *24/7 - O Capitalismo Tardio e os
     Fins do sono*, Antígona, 2.ª edição, 2025.
 
-[^5]: Sobre esta questão, de forma mais desenvolvida, [Luísa
-    Neto]{.smallcaps}, «De die ad diem: os dias úteis ou a utilidade dos
+[^5]: Sobre esta questão, de forma mais desenvolvida, Luísa
+    Neto, «De die ad diem: os dias úteis ou a utilidade dos
     dias. Acórdão do Tribunal Central Administrativo Norte (1.ª secção)
     de 8.2.2007, P.1394/06.0BEPRT», *Cadernos de Justiça Administrativa
     n.º 74*, março/abril 2009, pp. 37-54.
