--- a/src/app/posts/218.md
+++ b/src/app/posts/218.md
@@ -36,7 +36,7 @@ suscita.[^6] Apreciaremos aqui algumas delas.
 
 Desde logo, não é seguro o que se deva, ao certo, entender por
 terceirização.[^7] A doutrina tem procurado escamotear os contornos da
-figura, sendo que, e na esteira de [Ana Lambelho]{.smallcaps},[^8]
+figura, sendo que, e na esteira de Ana Lambelho,[^8]
 podemos considerar que este fenómeno se verifica quando uma organização
 (a adquirente ou beneficiária da atividade) atribui a realização de
 atividades necessárias ou convenientes à prossecução do seu objeto
@@ -121,16 +121,16 @@ proceder à sua revisão.
 
 [^1]: Embora seja uma expressão sem tradição no nosso ordenamento
     jurídico (usando-se antes no regime juslaboral brasileiro -- *vd.*
-    [Ana Lambelho]{.smallcaps}, «O trabalho temporário e a terceirização
+    Ana Lambelho, «O trabalho temporário e a terceirização
     à luz da Agenda do Trabalho Digno», *QL*, 2023, n.º 63, p. 193;
-    [Júlio Gomes]{.smallcaps}, «A Lei n.º 13/2023 de 3 de abril: uma
+    Júlio Gomes, «A Lei n.º 13/2023 de 3 de abril: uma
     mudança de paradigma em matéria de direito sindical?», in *Reforma
     da Legislação Laboral, Trabalho Digno, Conciliação entre a Vida
-    Professional e Familiar*, coord.: [Rosário Ramalho/Catarina
-    Carvalho/Joana Vicente]{.smallcaps}, AAFDL, Lisboa, 2023, p. 80;
-    [Nunes de Carvalho]{.smallcaps}, «O novo artigo 498.º-A do Código do
+    Professional e Familiar*, coord.: Rosário Ramalho/Catarina
+    Carvalho/Joana Vicente, AAFDL, Lisboa, 2023, p. 80;
+    Nunes de Carvalho, «O novo artigo 498.º-A do Código do
     Trabalho -- uma primeira aproximação», *RDES*, 2024, n.^os^ 1-2, p.
-    248 e [Vítor Rodrigues]{.smallcaps}, «Terceirização de serviços -- o
+    248 e Vítor Rodrigues, «Terceirização de serviços -- o
     Labirinto de Creta», *QL*, 2024, n.º 65, p. 90), iremos aderir à
     designação adotada pelo legislador.
 
@@ -140,12 +140,12 @@ proceder à sua revisão.
     [https://www.portugal.gov.pt/download-ficheiros/ficheiro.aspx?v=%3D%3DBQAAAB%2BLCAAAAAAABAAzNDE1sgAAScL4wgUAAAA%3D](https://www.portugal.gov.pt/download-ficheiros/ficheiro.aspx?v=%3D%3DBQAAAB%2BLCAAAAAAABAAzNDE1sgAAScL4wgUAAAA%3D)*
     (consultado em 2/11/2025).
 
-[^3]: *Vd.* [Ana Lambelho,]{.smallcaps} ob. cit., p. 198; [Vítor
-    Rodrigues]{.smallcaps}, ob. cit., p. 90 e [Monteiro
-    Fernandes]{.smallcaps}, «A reforma laboral e a contratação
+[^3]: *Vd.* Ana Lambelho, ob. cit., p. 198; Vítor
+    Rodrigues, ob. cit., p. 90 e Monteiro
+    Fernandes, «A reforma laboral e a contratação
     colectiva», in *Reforma da Legislação Laboral, Trabalho Digno,
-    Conciliação entre a Vida Professional e Familiar*, coord.: [Rosário
-    Ramalho/Catarina Carvalho/Joana Vicente]{.smallcaps}, AAFDL, Lisboa,
+    Conciliação entre a Vida Professional e Familiar*, coord.: Rosário
+    Ramalho/Catarina Carvalho/Joana Vicente, AAFDL, Lisboa,
     2023, p. 54.
 
 [^4]: Como sublinha o Tribunal Constitucional (no Ac. 555/2023, de
@@ -154,36 +154,36 @@ proceder à sua revisão.
     este será "um forte indício de poder não ter havido uma necessidade
     real de *despedir*, mas antes, uma forma de reduzir custos
     associados à manutenção dos contratos de trabalho existentes".
-    Salientado idêntico aspeto, [Leal Amado]{.smallcaps}, «A proibição
+    Salientado idêntico aspeto, Leal Amado, «A proibição
     de recurso à terceirização de serviços e o
     *despedimento-para-terceirizar*: nótula sobre o novo artigo 338.º-A
     do Código do Trabalho», *RLJ*, 2023, ano 152, n.º 4040, p. 313.
 
-[^5]: Configurando, assim, como refere [Júlio Gomes]{.smallcaps} (ob.
+[^5]: Configurando, assim, como refere Júlio Gomes (ob.
     cit., p. 80), mais uma exceção ao princípio da filiação.
 
-[^6]: Neste sentido, cfr*.* [Ana Lambelho]{.smallcaps}, ob. cit., pp.
+[^6]: Neste sentido, cfr*.* Ana Lambelho, ob. cit., pp.
     195-196.
 
-[^7]: *Vd*. [Vítor Rodrigues]{.smallcaps}, ob. cit., p. 89.
+[^7]: *Vd*. Vítor Rodrigues, ob. cit., p. 89.
 
-[^8]: Cfr*.* [Ana Lambelho]{.smallcaps}, ob. cit., p. 194.
+[^8]: Cfr*.* Ana Lambelho, ob. cit., p. 194.
 
-[^9]: Para as expressões entre parêntesis, *vd.* [Sousa Pinheiro/Lemos
-    de Almeida,]{.smallcaps} "Nótula sobre a terceirização de serviços
+[^9]: Para as expressões entre parêntesis, *vd.* Sousa Pinheiro/Lemos
+    de Almeida, "Nótula sobre a terceirização de serviços
     no âmbito da agenda do trabalho digno", *PDT*, I, 2023, p.
-    [314.]{.smallcaps}
+    314.
 
-[^10]: Cfr. [Ana Lambelho]{.smallcaps}, ob. cit., p. 203 e [Gonçalves da
-    Silva]{.smallcaps}, «Artigo 498.º-A -- Terceirização de serviços.
-    Anotação», in [Romano Martinez]{.smallcaps} et al., *Código do
+[^10]: Cfr. Ana Lambelho, ob. cit., p. 203 e Gonçalves da
+    Silva, «Artigo 498.º-A -- Terceirização de serviços.
+    Anotação», in Romano Martinez et al., *Código do
     Trabalho Anotado*, 14.ª ed., Coimbra, Almedina, 2025, p. 1181.
-    [Rosário Ramalho]{.smallcaps} (*Tratado de Direito do Trabalho*,
+    Rosário Ramalho (*Tratado de Direito do Trabalho*,
     *Parte III* -- *Situações laborais colectivas*, 4.ª ed., 2023,
     Coimbra, Almedina, p. 349) considera, por isso, particularmente
     infeliz que se fale, neste contexto, em "terceirização", dado que
-    esta requer a operação prévia de externalização. De resto, [Barbas
-    Homem]{.smallcaps} («O novo art. 498 A do Código do Trabalho e o
+    esta requer a operação prévia de externalização. De resto, Barbas
+    Homem («O novo art. 498 A do Código do Trabalho e o
     conceito de terceirização de serviços», *RDES*, 2024, n.^os^ 1 e 2,
     p. 31) defende que aqui só podem ser visadas as situações em que as
     empresas passam a realizar a sua atividade principal através de
@@ -191,7 +191,7 @@ proceder à sua revisão.
     eram preenchidos por trabalhadores pertencentes aos seus quadros.
 
 [^11]: Para mais desenvolvimentos e propugnando tal entendimento, cfr.
-    [Nunes de Carvalho]{.smallcaps}, ob. cit., pp. 252 e ss. Para o
+    Nunes de Carvalho, ob. cit., pp. 252 e ss. Para o
     Autor (p. 256), o preceito só se dirige às prestações de serviços
     diretamente ligadas ao concreto género de atividade que a pessoa
     coletiva se propõe realizar e que exprimem a fisionomia específica
@@ -199,74 +199,74 @@ proceder à sua revisão.
     adjacentes, periféricas ou instrumentais e, ainda, atividades
     transversais, que não tenham que ver com o concreto tipo de
     atividade económica em causa, embora sejam necessárias ao seu normal
-    funcionamento. [Rosário Ramalho]{.smallcaps} (ob. cit., p. 354) e
-    [Gonçalves da Silva]{.smallcaps} (ob. cit., p. 1182) consideram
+    funcionamento. Rosário Ramalho (ob. cit., p. 354) e
+    Gonçalves da Silva (ob. cit., p. 1182) consideram
     ainda que a alusão ao objeto social exclui os casos em que o
     beneficiário seja uma pessoa singular.
 
-[^12]: Assim, [Júlio Gomes]{.smallcaps}, ob. cit., p. 80; [Ana
-    Lambelho]{.smallcaps}, ob. cit., p. 203; [Rosário
-    Ramalho]{.smallcaps}, ob. cit., p. 349; [Monteiro
-    Fernandes]{.smallcaps}, ob. cit., p. 53 e [Nunes de
-    Carvalho]{.smallcaps}, ob. cit., p. 251.
+[^12]: Assim, Júlio Gomes, ob. cit., p. 80; Ana
+    Lambelho, ob. cit., p. 203; Rosário
+    Ramalho, ob. cit., p. 349; Monteiro
+    Fernandes, ob. cit., p. 53 e Nunes de
+    Carvalho, ob. cit., p. 251.
 
-[^13]: Assim, [Nunes de Carvalho]{.smallcaps}, ob. cit., p. 258.
+[^13]: Assim, Nunes de Carvalho, ob. cit., p. 258.
 
 [^14]: Cfr. Ac. *FNV Kunsten* (proc. C-413/13), pars. 28-30.
-    Salientando, também, este aspeto, *vd.* [Ana Lambelho]{.smallcaps},
+    Salientando, também, este aspeto, *vd.* Ana Lambelho,
     ob. cit., p. 204.
 
-[^15]: *Vd.* [Ana Lambelho]{.smallcaps}, ob. cit., p. 203 e [Vítor
-    Rodrigues]{.smallcaps}, ob. cit., p. 93. [Gonçalves da
-    Silva]{.smallcaps} (ob. cit., p. 1182) sugere que a escolha seja do
+[^15]: *Vd.* Ana Lambelho, ob. cit., p. 203 e Vítor
+    Rodrigues, ob. cit., p. 93. Gonçalves da
+    Silva (ob. cit., p. 1182) sugere que a escolha seja do
     prestador.
 
-[^16]: [Vítor Rodrigues]{.smallcaps} (ob. cit., p. 102) sugere que se
+[^16]: Vítor Rodrigues (ob. cit., p. 102) sugere que se
     apliquem as condições vigentes no beneficiário para o qual, em cada
     momento, se esteja a prestar serviço. Todavia, será sempre possível
     diferenciar para quem o serviço está a ser realizado? Apresentando
-    outros cenários dúbios, cfr. [Ana Lambelho]{.smallcaps}, ob. cit.,
+    outros cenários dúbios, cfr. Ana Lambelho, ob. cit.,
     p. 204.
 
-[^17]: Com idênticas questões, cfr. [Vítor Rodrigues]{.smallcaps}, ob.
+[^17]: Com idênticas questões, cfr. Vítor Rodrigues, ob.
     cit., p. 100. Referindo-se, também, às dificuldades em realizar este
-    juízo, *vd.* [Ana Lambelho]{.smallcaps}, ob. cit., p. 203.
+    juízo, *vd.* Ana Lambelho, ob. cit., p. 203.
     Salientando a impossibilidade em comparar os termos de um
     instrumento laboral e os de um contrato de prestação de serviço,
-    cfr. [Rosário Ramalho]{.smallcaps}, ob. cit., p. 355 e [Gonçalves da
-    Silva]{.smallcaps}, ob. cit., p. 1182.
+    cfr. Rosário Ramalho, ob. cit., p. 355 e Gonçalves da
+    Silva, ob. cit., p. 1182.
 
 [^18]: Em sentido similar, considerando que a aplicação do IRCT do
     beneficiário ao prestador mesmo que ele tenha filiação sindical e já
     esteja abrangido por uma convenção e/ou a sua associação sindical
     tenha deduzido oposição à extensão da convenção em causa contende
-    com tais direitos fundamentais, cfr. [Ana Lambelho]{.smallcaps} (ob.
-    cit., p. 205). [Rosário Ramalho]{.smallcaps} (ob. cit., p. 354) fala
+    com tais direitos fundamentais, cfr. Ana Lambelho (ob.
+    cit., p. 205). Rosário Ramalho (ob. cit., p. 354) fala
     também numa entorse ao princípio da autonomia coletiva. Por seu
     turno, propugnando que a norma suscita muitas reservas e que será
     inconstitucional se redundar no afastamento de um IRCT diretamente
     aplicável ao prestador por força do princípio da filiação, *vd.*
-    [Vítor Rodrigues]{.smallcaps}, ob. cit., p. 93. De outra banda,
+    Vítor Rodrigues, ob. cit., p. 93. De outra banda,
     considerando que a aplicação imediata do preceito a situações
     pré-existentes é violadora da segurança jurídica, pelo que a norma
     apenas deve abranger os novos contratos celebrados após a sua
-    entrada em vigor, cfr. [Barbas Homem]{.smallcaps}, ob. cit., p. 45.
+    entrada em vigor, cfr. Barbas Homem, ob. cit., p. 45.
 
-[^19]: Cfr. [Sousa Pinheiro/Lemos de Almeida,]{.smallcaps} ob. cit., p.
+[^19]: Cfr. Sousa Pinheiro/Lemos de Almeida, ob. cit., p.
     324.
 
-[^20]: Levantando esta dúvida, cfr. [Vítor Rodrigues]{.smallcaps}, ob.
+[^20]: Levantando esta dúvida, cfr. Vítor Rodrigues, ob.
     cit., p. 106. De resto, não parecem estar, ainda, reunidas as
     condições para a aplicação do regime contido no art. 10.º-A, n.º 2,
     por ainda não ter sido aprovada a "legislação específica" a que a
     norma faz referência.
 
-[^21]: Para estas e outras questões, *vd.* [Nunes de
-    Carvalho]{.smallcaps}, ob. cit., pp. 276 e ss. e [Vítor
-    Rodrigues]{.smallcaps}, ob. cit., pp. 103-104. Da sua parte, [Júlio
-    Gomes]{.smallcaps} (ob. cit., p. 80) considera que será frequente
+[^21]: Para estas e outras questões, *vd.* Nunes de
+    Carvalho, ob. cit., pp. 276 e ss. e Vítor
+    Rodrigues, ob. cit., pp. 103-104. Da sua parte, Júlio
+    Gomes (ob. cit., p. 80) considera que será frequente
     que se preveja que o responsável seja a contraparte do beneficiário
     e que pode, por exemplo, não oferecer as mesmas condições de
     solvabilidade.
 
-[^22]: Assim, [Júlio Gomes]{.smallcaps}, ob. cit., pp. 59 e 80.
+[^22]: Assim, Júlio Gomes, ob. cit., pp. 59 e 80.
