--- a/src/app/posts/220.md
+++ b/src/app/posts/220.md
@@ -6,7 +6,7 @@ author: "Jorge Louraço Figueira"
 section: 'Culturas do Trabalho'
 ---
 
-*A revista "***Que Força É Essa?"** *passa a acolher na secção "Culturas
+*A revista "**Que Força É Essa?"** *passa a acolher na secção "Culturas
 do Trabalho", a partir deste número, uma série intitulada "Cromos da
 Caderneta do Trabalho", da autoria de Jorge Louraço Figueira. A partir
 de exemplos desenvolvidos por si, enquanto dramaturgo, e por outros,
@@ -48,7 +48,7 @@ Leitão, *Suplicantes*, em que um entregador atravessa o mar mediterrâneo
 para fazer chegar uma refeição quente a um deputado do Parlamento
 Europeu.
 
-![Créditos: Diogo Marques](/images/220-1.jpg)
+![Créditos: João Neto](/images/220-2.jpg)
 
 A fotografia de divulgação do espetáculo lembra que por trás de cada
 entrega, longe da vista de toda a gente, há muito esforço ainda por ser
@@ -61,7 +61,7 @@ de 1974-75 e a precariedade dos nossos tempos. Entre outras cenas que
 não cabe aqui recapitular, primeiro, refizemos a famosa cena da enxada
 do filme *Torre Bela* como um número de teatro de Robertos.
 
-![Créditos: João Neto](/images/220-2.jpg)
+![Créditos: Diogo Marques](/images/220-1.jpg)
 
 Na foto, os Robertos (nas mãos de Sara Henriques e Inês Teixeira) que
 representam Vitória, Eugénio e Wilson, as pessoas que participam na cena
